# ai-cloud-hackathon-2

./: .gitignore
.claude/agents/: api-architect.md  auth-security-engineer.md  backend-engineer.md  database-engineer.md  frontend-engineer.md  project-orchestrator.md  spec-manager.md
.claude/skills/Authentication-and-session-management/: skills.md
.claude/skills/Data-base-management/: skills.md
.claude/skills/animation-ux-enhancement/: skill.md
.claude/skills/api-management/: skill.md
.claude/skills/crud-core/: skills.md
.specify/memory/: constitution.md
history/adr/: 001-uuid-primary-keys.md
phase-1/: README.md  demo.txt  main.py  pyproject.toml
phase-1/src/todo/: __init__.py  __main__.py  cli.py  exceptions.py  manager.py  menu.py  models.py  ui.py
phase-1/tests/: conftest.py  test_cli.py  test_main.py  test_manager.py  test_models.py
phase-ll/: LOGIN-FIX-SUMMARY.md  README.md  TASK-DELETION-FIX-SUMMARY.md  test-auth-flow.js  test-task-deletion.js
phase-ll/backend/: .env.example  .env.test  Dockerfile  QUICKSTART.md  pyproject.toml  requirements.txt
phase-ll/backend/app/: config.py  database.py  main.py
phase-ll/backend/app/dependencies/: auth.py
phase-ll/backend/app/middleware/: error_handler.py
phase-ll/backend/app/models/: __init__.py  task.py  user.py
phase-ll/backend/app/routes/: auth.py  tasks.py
phase-ll/backend/app/schemas/: auth.py  error.py  task.py
phase-ll/backend/app/services/: auth.py  task.py
phase-ll/backend/tests/: test_auth.py  test_integration.py  test_tasks.py
phase-ll/frontend/: .env.local.example  jest.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json  vercel.json
specs/001-fullstack-web-app/: architecture.md  data-model.md  overview.md  plan.md  quickstart.md  spec.md  tasks.md
specs/phase1-console/: data-model.md  models.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+155 files in other folders)
