[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo"
version = "0.1.0"
description = "A simple command-line todo application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]
